# yolo_active_learning

./: .gitignore  README.md  pyproject.toml
scripts/: yolo_active_learning.py  yolo_active_learning_rock_paper_scissors.py  yolo_active_learning_rock_paper_scissors_only_detected.py  yolo_active_learning_rock_paper_scissors_random.py
